<resources>
    <string name="app_name">FChat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rememberpass">remember me</string>
    <string name="acc_error">Vui lòng nhập tài khoản</string>
    <string name="pass_error">Mật khẩu phải lớn hơn 6 ký tự</string>
    <string name="accc_error">Tài khoản phải lớn hơn 6 ký tự</string>
    <string name="user">user</string>
    <string name="store">store</string>

    <string name="action_delete">xóa</string>
    <string name="newposttitle">Add new post</string>
    <string name="token">logined</string>
    <string name="connectfail">kiểm tra kết nối mạng !!</string>
    <string name="isempity">java.lang.IllegalArgumentException: Invalid target position</string>
    <string name="text_color">#fff</string>
    <string name="title_toolbar_historyfragment">bài viết đã lưu</string>
    <string name="binhluan">bình luận</string>
    <string name="yeuthich">lượt thích</string>
    <string name="stringRes">kéo lên để xem chi tiết</string>
    <string name="title_toolBar_Store">Bài viết cửa hàng</string>
    <string name="title_toolBar_Main">Online stores</string>
    <string name="title_toolBar_FragmentImageView">Chi tiết sản phẩm</string>
    <string name="title_toolBar_FragmentUsermanager">Thông tin cá nhân</string>
    <string name="title_toolBar_FragmentNewPost">Thêm bài viết</string>
    <string name="title_toolBar_FragmentEditPost">Chỉnh sửa bài viết</string>
    <string name="nointernet">java.lang.IllegalStateException: Cannot modify managed objects outside of a write transaction.</string>
    <string name="chedokhonginternet">bạn không thể thực hiện chức năng này khi mất mạng</string>
    <string name="loiketnoi">java.net.ConnectException: Failed to connect to</string>
    <string name="contentShouldNotScrollTag">com.example.mypc.stores.ui.main.utils.MyScrollBehavior</string>
    <string name="fixScrollingFooterBehavior">com.example.mypc.stores.ui.main.utils.FixScrollingFooterBehavior</string>
    <string name="replayavatar">Thay đổi đại diện</string>
    <string name="nullPosition">1111</string>
    <string name="numberError">sdt phải là 9 hoặc 10 số</string>
    <string name="notupimage">xin chờ ảnh chưa được load xong do mạng của bạn chậm</string>
    <string name="enterename">Enter the name</string>
    <string name="enterthepss">Enter the password</string>
    <string name="btnlogin">Sign In</string>
    <string name="signupnow">Sign up now</string>
    <string name="enterthenumber">Enter the number</string>
    <string name="signup">sign up</string>
    <string name="mini_app_name">life of you!</string>
    <string name="enter_email">Enter your email</string>
    <string name="confim_pass">confirm password</string>
    <string name="email_erorr">email không đúng</string>
    <string name="confim_pass_erorr">mật khẩu không khớp</string>
    <string name="text_tinnhan">tin nhắn</string>
    <string name="text_banbe">bạn bè</string>
    <string name="text_chatnhom">nhóm</string>
    <string name="cancel">Hủy</string>
    <string name="send">gửi</string>
    <string name="time">20p</string>
</resources>
