<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgroud"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".RegisActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:fontFamily="casual"
            android:paddingLeft="50dp"
            android:text="@string/mini_app_name"
            android:textColor="@color/red"
            android:textStyle="italic" />

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/imglogo"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:src="@drawable/logo" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtRegisEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_account"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email"
            android:maxLength="40"
            android:maxLines="1"
            android:paddingLeft="5dp" />


        <EditText
            android:id="@+id/edtRegisPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enterthepss"
            android:inputType="textPassword"
            android:maxLines="1"

            android:paddingLeft="5dp" />


        <EditText
            android:id="@+id/edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_calll"
            android:drawablePadding="10dp"
            android:hint="@string/confim_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="5dp" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <View
            android:layout_width="200dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#2244d9" />


    </LinearLayout>

    <Button
        android:id="@+id/btnRegisBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="back"
        android:textAllCaps="false"
        android:textColor="@color/redd" />
</LinearLayout>